opam-version: "2.0"
name: "frames"
maintainer: "Anurag Soni <anurag@sonianurag.com>"
authors: ["Anurag Soni <anurag@sonianurag.com>"]
homepage: "https://github.com/anuragsoni/h2"
dev-repo: "git+https://github.com/anuragsoni/h2"
bug-reports: "https://github.com/anuragsoni/h2/issues"
license: "BSD-3-clause"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
run-test: [
  ["dune" "runtest" "-p" name]
]
depends: [
  "ocaml" {>= "4.04.2" }
  "dune" {build & >= "1.1"}
  "angstrom" {>= "0.9.0"}
  "faraday" {>= "0.5.0" }
  "base" {>= "0.11.0"}
  "hex" {with-test}
  "alcotest" {with-test}
]
